--- a/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
+++ b/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
@@ -9,86 +9,137 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# OS Module\n",
-    "import os\n",
-    "\n",
-    "os.listdir()\n",
-    "\n",
-    " os.getcwd()\n",
-    "\n",
-    "os.listdir('c:\\\\Users')\n",
-    "\n",
-    "f = open('practice.txt','w+')\n",
-    "\n",
-    "f.write('test')\n",
-    "\n",
-    "f.close()\n"
+    "# OS Module"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "# datetime Module\n",
-    "import datetime\n",
-    "\n",
-    "t = datetime.time(4, 20, 1)\n",
-    "\n",
-    "today = datetime.date.today()\n",
-    "\n",
-    "### Arithmetic\n",
-    "    datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)\n",
-    "    datetime.timedelta(days=9131)\n"
+    "    import os\n",
+    "    os.listdir()\n",
+    "     os.getcwd()\n",
+    "    os.listdir('c:\\\\Users')\n",
+    "    f = open('practice.txt','w+')\n",
+    "    f.write('test')\n",
+    "    f.close()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Moving files around\n",
-    "\n",
-    "import shutil\n",
-    "\n",
-    "shutil.move('practice.txt','C:\\\\Users\\\\Marcial')\n",
-    "\n",
-    "shutil.move('C:\\\\Users\\\\Marcial\\practice.txt',os.getcwd())\n",
-    "\n"
+    "# datetime Module\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "### Deleting Files\n",
-    "\n",
-    "pip install send2trash\n",
-    "\n",
-    "import send2trash\n",
-    "\n",
-    "send2trash.send2trash('practice.txt')"
+    "    import datetime\n",
+    "    t = datetime.time(4, 20, 1)\n",
+    "    today = datetime.date.today()\n",
+    "    ### Arithmetic\n",
+    "        datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)\n",
+    "        datetime.timedelta(days=9131)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Walking through a directory\n",
+    "# Moving files around"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "      import shutil\n",
     "\n",
-    "for folder , sub_folders , files in os.walk(\"Example_Top_Level\"):\n",
+    "      shutil.move('practice.txt','C:\\\\Users\\\\Marcial')\n",
+    "\n",
+    "      shutil.move('C:\\\\Users\\\\Marcial\\practice.txt',os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Deleting Files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    pip install send2trash\n",
+    "\n",
+    "    import send2trash\n",
+    "\n",
+    "    send2trash.send2trash('practice.txt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Walking through a directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    for folder , sub_folders , files in os.walk(\"Example_Top_Level\"):\n",
     "    \n",
     "    print(\"Currently looking at folder: \"+ folder)\n",
     "    print('\\n')\n",
@@ -105,13 +156,6 @@
     "    \n",
     "    # Now look at subfolders"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -165,14 +209,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Debugger\n",
-    "Setting a trace\n",
+    "# Python Debugger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Setting a trace\n",
     "\n",
     "    import pdb\n",
     "    x = [1,2,3]\n",
     "    y = 2\n",
-    "    z = 3\n"
+    "    z = 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -222,6 +279,27 @@
     "zipobject.extractall(\"extracted_content\")\n",
     "zipobject.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -243,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
