--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -108,24 +108,44 @@
   {
    "cell_type": "markdown",
    "id": "3afd25fe",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# This is a test heading. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caeb098c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "9bc3827e",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Linking to another website image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14bf204c",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "___\n",
+    "\n",
+    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
+    "___\n",
+    "<center><em>Content Copyright by Pierian Data</em></center>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a6e1e727",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
