--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "painted-donor",
    "metadata": {
     "heading_collapsed": true
    },
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "characteristic-cartoon",
    "metadata": {
     "hidden": true
    },
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "selective-rolling",
    "metadata": {
     "hidden": true
    },
@@ -36,6 +39,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "developing-launch",
    "metadata": {
     "hidden": true
    },
@@ -46,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "racial-ireland",
    "metadata": {
     "hidden": true
    },
@@ -55,6 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "painted-stations",
    "metadata": {
     "hidden": true
    },
@@ -66,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "successful-wichita",
    "metadata": {
     "hidden": true
    },
@@ -74,6 +81,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "foster-hartford",
    "metadata": {
     "heading_collapsed": true
    },
@@ -83,6 +91,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "referenced-gender",
    "metadata": {
     "heading_collapsed": true,
     "hidden": true
@@ -94,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "opposite-south",
    "metadata": {
     "hidden": true
    },
@@ -138,6 +148,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "typical-piano",
    "metadata": {
     "hidden": true
    },
@@ -147,6 +158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "manual-basis",
    "metadata": {
     "hidden": true
    },
@@ -160,12 +172,18 @@
     "   C:\\Users\\azi>jupyter contrib nbextension install --user\n",
     "\n",
     "3. C:\\Users\\azi>jupyter nbextension enable collapsible_headings/main\n",
-    "    Enabling notebook extension collapsible_headings/main.."
+    "\n",
+    "    Enabling notebook extension collapsible_headings/main..\n",
+    "    \n",
+    "3 . C:\\Users\\SONY>jupyter nbextension enable collapsible_headings/main\n",
+    "Enabling notebook extension collapsible_headings/main...\n",
+    "      - Validating: ok"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "similar-driving",
    "metadata": {
     "hidden": true
    },
@@ -174,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "distant-checkout",
    "metadata": {
     "heading_collapsed": true
    },
@@ -183,6 +202,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "conceptual-davis",
    "metadata": {
     "hidden": true
    },
@@ -193,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "attractive-longitude",
    "metadata": {
     "hidden": true
    },
@@ -202,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "wicked-amateur",
    "metadata": {
     "hidden": true
    },
@@ -210,6 +232,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "universal-syndicate",
    "metadata": {},
    "source": [
     "# JUPYTER NOTEBOOK THEMES."
@@ -217,6 +240,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "smoking-transition",
    "metadata": {
     "heading_collapsed": true
    },
@@ -228,6 +252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "mysterious-chrome",
    "metadata": {
     "hidden": true
    },
@@ -235,6 +260,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ideal-franchise",
    "metadata": {
     "heading_collapsed": true
    },
@@ -265,6 +291,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "demographic-public",
    "metadata": {},
    "source": [
     "#### To Run from jupyter notebook\n",
@@ -273,6 +300,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "czech-farming",
    "metadata": {},
    "source": [
     "https://stackoverflow.com/questions/46510192/change-the-theme-in-jupyter-notebook"
@@ -281,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "chemical-trademark",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -288,6 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "concrete-responsibility",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,6 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "potential-kernel",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -302,6 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "controversial-aside",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -309,6 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "wanted-shoot",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -316,6 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "filled-tactics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "reverse-bunny",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
