--- a/12-Advanced Python Modules/Excercise/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/Excercise/01-Opening-and-Reading-Files-Folders.ipynb
@@ -321,7 +321,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
